human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_79.wast
(assert_invalid
  (module (func $type-return-second-num-vs-num (result i32)
    (return (i32.const 1)) (return (f64.const 1))
  ))
  "type mismatch"
)